cmake_minimum_required(VERSION 3.21 FATAL_ERROR)
project(PilotBoBi VERSION 0.1.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(BUILD_SHARED_LIBS  OFF)

include(CMakeDependentOption)

# ---- Include guards ----
if(PROJECT_SOURCE_DIR STREQUAL PROJECT_BINARY_DIR) # STREQUAL: compare str
    message(
            FATAL_ERROR
            "In-source builds not allowed. Please make a new directory (called a build directory) and run CMake from there."
    )
endif()

set(PILOTBOBI_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/..")

add_executable(PilotBoBi main.cpp)